Woods/Farm zone

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Tiles/Wall-Up.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://Scene/", "res://Assets/", "res://Assets/Tiles/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/Tiles/BaseMapTileSet.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://Scene/", "res://Assets/", "res://Assets/Tiles/", "res://Assets/Sprites/", "res://Assets/Sprites/Japanese school characters/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -27,14 +27,15 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://UI/MainMenu.tscn", "res://UI/SettingsMenu.tscn", "res://Scene/VideoWebProv.tscn")
 current_scene="res://Scene/VideoWebProv.tscn"
-center_split_offset=-610
+center_split_offset=-556
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
+selected_bottom_panel_item=11
 
 [ScriptEditor]
 
-open_scripts=["res://Scene/character_body_2d.gd"]
-selected_script="res://Scene/character_body_2d.gd"
+open_scripts=["res://Scene/character_body_2d.gd", "res://character_body_2d.gd"]
+selected_script="res://character_body_2d.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
