--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Tiles/Wall-Up.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://Scene/", "res://Assets/", "res://Assets/Tiles/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/Fonts/Beholden-Regular.ttf")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scene/", "res://Assets/", "res://Assets/Fonts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -26,15 +26,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://UI/MainMenu.tscn", "res://UI/SettingsMenu.tscn", "res://Scene/VideoWebProv.tscn")
-current_scene="res://Scene/VideoWebProv.tscn"
-center_split_offset=-610
+current_scene="res://UI/MainMenu.tscn"
+center_split_offset=-574
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://Scene/character_body_2d.gd"]
-selected_script="res://Scene/character_body_2d.gd"
+open_scripts=["res://Scene/character_body_2d.gd", "res://UI/main_menu.gd", "res://UI/settings_menu.gd"]
+selected_script="res://UI/main_menu.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
