Nuevas zonas demo

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,15 +10,15 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-279
+dock_hsplit_3=-274
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Tiles/BaseMapTileSet.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://Scene/", "res://Assets/", "res://Assets/Tiles/", "res://Assets/Sprites/", "res://Assets/Sprites/Japanese school characters/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/Sprites/Xmas/pipo-xmaschara01.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://Scene/", "res://Assets/", "res://Assets/Tiles/", "res://Assets/Sprites/", "res://Assets/Sprites/Xmas/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -27,17 +27,9 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://UI/MainMenu.tscn", "res://UI/SettingsMenu.tscn", "res://Scene/VideoWebProv.tscn")
 current_scene="res://Scene/VideoWebProv.tscn"
-<<<<<<< Updated upstream
-center_split_offset=-556
+center_split_offset=-370
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=11
-=======
-center_split_offset=-244
-selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
->>>>>>> Stashed changes
 
 [ScriptEditor]
 
