--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Sprites/Xmas/pipo-xmaschara01.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://Scene/", "res://Assets/", "res://Assets/Tiles/", "res://Assets/Sprites/", "res://Assets/Sprites/Xmas/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/Sprites/Male/Male 01-1.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://UI/", "res://Scene/", "res://Assets/Sprites/", "res://Assets/Sprites/Male/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -27,16 +27,17 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://UI/MainMenu.tscn", "res://UI/SettingsMenu.tscn", "res://Scene/VideoWebProv.tscn")
 current_scene="res://Scene/VideoWebProv.tscn"
-center_split_offset=-362
-selected_default_debugger_tab_idx=0
+center_split_offset=-334
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=0
+selected_bottom_panel_item=12
 
 [ScriptEditor]
 
 open_scripts=["res://Scene/character_body_2d.gd", "res://character_body_2d.gd"]
-selected_script="res://character_body_2d.gd"
+selected_script="res://Scene/character_body_2d.gd"
 open_help=[]
-script_split_offset=70
+script_split_offset=150
 list_split_offset=0
 zoom_factor=1.0
 
