--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=170
+dock_hsplit_2=305
 dock_hsplit_3=-274
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Dialogos/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/Sprites/Enemy/Enemy 02-1.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/Sprites/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,16 +25,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://UI/MainMenu.tscn", "res://UI/SettingsMenu.tscn", "res://Scene/VideoWebProv.tscn", "res://Scene/npc.tscn")
+open_scenes=PackedStringArray("res://Scene/VideoWebProv.tscn", "res://Scene/house.tscn", "res://Scene/inside.tscn", "res://Scene/player.tscn", "res://Scene/control.tscn", "res://Scene/npc.tscn", "res://Scene/npc_combate.tscn")
 current_scene="res://Scene/VideoWebProv.tscn"
-center_split_offset=-334
-selected_default_debugger_tab_idx=1
+center_split_offset=-252
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scene/character_body_2d.gd", "res://character_body_2d.gd", "res://Scene/npc.gd"]
-selected_script="res://Scene/npc.gd"
+open_scripts=["res://Scene/character_body_2d.gd", "res://character_body_2d.gd", "res://Scene/control.gd", "res://Scene/door_way.gd", "res://Scene/global.gd", "res://Scene/house.gd", "res://Scene/inside.gd", "res://Scene/npc.gd", "res://Scene/npc_prision.gd", "res://Scene/npc_prisionero.gd", "res://Scene/player.gd", "res://Scene/video_web_prov.gd"]
+selected_script="res://Scene/video_web_prov.gd"
 open_help=[]
 script_split_offset=150
 list_split_offset=0
