Cambio de escena npc combate

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -18,7 +18,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://Assets/Sprites/Enemy/Enemy 02-1.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/Sprites/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/Enemy/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -26,10 +26,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scene/VideoWebProv.tscn", "res://Scene/house.tscn", "res://Scene/inside.tscn", "res://Scene/player.tscn", "res://Scene/control.tscn", "res://Scene/npc.tscn", "res://Scene/npc_combate.tscn")
-current_scene="res://Scene/VideoWebProv.tscn"
+current_scene="res://Scene/inside.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
